--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,14 @@
-name: Node.js CI
+name: CI
 
 on:
   push:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 18
-        cache: 'yarn'
-    - run: yarn install --immutable
-    - run: yarn test --watchAll=false
+      - uses: actions/checkout@v3
+      - uses: devcontainers/ci@v0.3
+        with:
+          runCmd: yarn test --watchAll=false
