--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://m-k.enterprises",
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@babel/runtime": "^7.27.6",
     "@smolpack/bootstrap-extensions": "^1.0.0",
     "@smolpack/react-bootstrap-extensions": "^0.1.1",
     "@testing-library/jest-dom": "^5.14.1",
