--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ REACT_APP_SHOPIFY_TOKEN_BEAR_BELTS=your-bear-belts-token
 REACT_APP_SHOPIFY_TOKEN_POCKET_BEARS_APPAREL=your-pocket-bears-token
 REACT_APP_SHOPIFY_TOKEN_MYTHICAL_MOODS=your-mythical-moods-token
 REACT_APP_SHOPIFY_TOKEN_AURA_ESSENCE=your-aura-essence-token
+# REACT_APP_SHOPIFY_TOKEN_SIZZLE_SOAK=your-sizzle-soak-token
