--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
-    "@testing-library/dom": "^10.4.0"
+    "@testing-library/dom": "^10.4.0",
+    "eslint": "8.56.0",
+    "eslint-config-react-app": "7.0.1"
   }
 }
