--- a/package.json
+++ b/package.json
@@ -17,19 +17,17 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-gravatar": "^2.6.10",
-    "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
     "graphql.macro": "^1.4.2",
     "lodash": "^4.17.21",
+    "next": "^15.3.3",
     "pantone-css": "^0.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-gravatar": "^2.6.3",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "typescript": "^4.4.2",
