--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "next",
+      "next/core-web-vitals"
     ]
   },
   "browserslist": {
@@ -60,6 +60,9 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
-    "@testing-library/dom": "^10.4.0"
+    "@testing-library/dom": "^10.4.0",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
+    "eslint-plugin-next": "^0.0.0"
   }
 }
