chore: use NEXT_PUBLIC prefix for Shopify tokens

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Environment variables for Shopify tokens
 NEXT_PUBLIC_SHOPIFY_TOKEN_BEAR_BELTS=your-bear-belts-token
 NEXT_PUBLIC_SHOPIFY_TOKEN_POCKET_BEARS_APPAREL=your-pocket-bears-token
 NEXT_PUBLIC_SHOPIFY_TOKEN_MYTHICAL_MOODS=your-mythical-moods-token
