--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@smolpack/bootstrap-extensions": "^1.0.0",
     "@smolpack/react-bootstrap-extensions": "^0.1.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.191",
@@ -36,7 +35,7 @@
   "scripts": {
     "start": "next start",
     "build": "next build",
-    "test": "next test",
+    "test": "jest",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "dev": "next dev"
   },
@@ -61,8 +60,12 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
+    "cross-fetch": "^4.1.0",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
-    "eslint-plugin-next": "^0.0.0"
+    "eslint-plugin-next": "^0.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2"
   }
 }
