--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
   "include": [
     "src",
     "src/types.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "jest.setup.ts"
   ],
   "exclude": [
     "node_modules"
